--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,8 @@ SQLAlchemy = { version = "1.4.31", extras = ["mypy", "asyncio"] }
 pymysql = '1.0.2'
 # for caching_sha2_password access in MySQL
 cryptography = '3.4.8'
-# for migrating a DB
-alembic = '1.7.5'
 # for attributi: parsing/printing a delta
-isodate = '0.6.0'
+isodate = '0.6.1'
 # for the config file
 PyYAML = '5.4.1'
 # for accessing XDG_CONFIG_HOME in the config file for example
@@ -31,8 +29,6 @@ numpy = { version = '1.21.4' }
 pyzmq = '22.3.0'
 # for plotting
 pandas = '1.3.4'
-# For printing "x second(s) ago" in the comments
-humanize = '3.12.0'
 # For validating units
 pint = '0.16.1'
 # for the daemon
@@ -70,9 +66,9 @@ essential-generators = "1.0"
 aiohttp = "3.8.1"
 
 [tool.poetry.dev-dependencies]
-black = '21.9b0'
-mypy = '0.930'
-types-pytz = "2021.3.4"
+black = '22.1.0'
+mypy = '0.931'
+types-pytz = "2021.3.5"
 pylint = '2.12.2'
 pyfakefs = '4.5.3'
 # for the daemon
@@ -92,11 +88,10 @@ pytest-subprocess = "1.4.1"
 amarcord-karabo-bridge-daemon = "amarcord.cli.karabo_bridge_daemon:main"
 amarcord-cfel-analysis-daemon = "amarcord.cli.cfel_analysis_daemon:main"
 amarcord-webserver = "amarcord.cli.webserver:main"
-amarcord-kamzik-daemon = "amarcord.cli.kamzik_zmq_async_daemon:main"
 amarcord-xfel-filesystem-ingester = "amarcord.cli.xfel_filesystem_ingester:main"
 amarcord-karabo-online-ingester = "amarcord.cli.karabo_online_ingester:main"
 amarcord-karabo-bridge-dumper = "amarcord.cli.karabo_bridge_dumper:main"
-amarcord-analysis-daemon = "amarcord.cli.analysis_daemon:main"
+amarcord-daemon = "amarcord.cli.daemon:main"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
