--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ aiofiles==0.8.0; python_version >= "3.7" and python_version < "4.0" and python_f
 aiohttp==3.8.1; python_version >= "3.6"
 aiosignal==1.2.0; python_version >= "3.6"
 aiosqlite==0.17.0; python_version >= "3.6"
-alembic==1.7.5; python_version >= "3.6"
 async-timeout==4.0.2; python_version >= "3.6"
 asyncmy==0.2.3; python_version >= "3.7" and python_version < "4.0"
 attrs==21.4.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
@@ -18,30 +17,26 @@ extra-data==1.8.1; python_version >= "3.6"
 fire==0.4.0
 fonttools==4.29.1; python_version >= "3.7"
 frozenlist==1.3.0; python_version >= "3.7"
-greenlet==1.1.2; python_version >= "3" and python_full_version < "3.0.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6") or python_version >= "3" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and python_full_version >= "3.5.0" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6")
+greenlet==1.1.2; python_version >= "3" and python_full_version < "3.0.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") or python_version >= "3" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and python_full_version >= "3.5.0"
 h11==0.13.0; python_full_version >= "3.6.1" and python_version >= "3.7"
 h2==4.1.0; python_full_version >= "3.6.1" and python_version >= "3.7"
 h5py==3.6.0; python_version >= "3.7"
 hpack==4.0.0; python_full_version >= "3.6.1" and python_version >= "3.7"
-humanize==3.12.0; python_version >= "3.6"
 hypercorn==0.13.2; python_version >= "3.7" and python_full_version >= "3.7.0"
 hyperframe==6.0.1; python_full_version >= "3.6.1" and python_version >= "3.7"
 idna==3.3; python_version >= "3.6"
-importlib-metadata==4.11.1; python_version < "3.9" and python_version >= "3.7"
-importlib-resources==5.4.0; python_version < "3.9" and python_version >= "3.6"
-isodate==0.6.0
-itsdangerous==2.0.1; python_version >= "3.7" and python_full_version >= "3.7.0"
+isodate==0.6.1
+itsdangerous==2.1.0; python_version >= "3.7" and python_full_version >= "3.7.0"
 jinja2==3.0.3; python_version >= "3.7" and python_full_version >= "3.7.0"
 karabo-bridge==0.6.1
 kiwisolver==1.3.2; python_version >= "3.7"
-mako==1.1.6; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-markupsafe==2.0.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
+markupsafe==2.1.0; python_version >= "3.7"
 matplotlib==3.5.1; python_version >= "3.7"
 msgpack-numpy==0.4.7.1
 msgpack==1.0.2
 multidict==6.0.2; python_version >= "3.7"
 mypy-extensions==0.4.3; python_version >= "3.6" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0")
-mypy==0.930; python_version >= "3.6"
+mypy==0.931; python_version >= "3.6"
 numpy==1.21.4; python_version >= "3.7" and python_version < "3.11"
 packaging==21.3; python_version >= "3.8"
 pandas==1.3.4; python_full_version >= "3.7.1"
@@ -63,11 +58,11 @@ quart==0.16.2; python_version >= "3.7"
 randomname==0.1.5
 setuptools-scm==6.4.2; python_version >= "3.7"
 six==1.16.0; python_full_version >= "3.7.1"
-sqlalchemy2-stubs==0.0.2a19; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
+sqlalchemy2-stubs==0.0.2a20; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
 sqlalchemy==1.4.31; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 termcolor==1.1.0
 toml==0.10.2; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
-tomli==1.2.3; python_version >= "3.7" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0")
+tomli==2.0.1; python_version >= "3.7" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0")
 tqdm==4.62.3; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 typed-argument-parser==1.7.2
 typing-extensions==4.1.1; python_version >= "3.6" and python_full_version >= "3.6.1" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6")
@@ -77,4 +72,3 @@ wsproto==1.0.0; python_full_version >= "3.6.1" and python_version >= "3.7"
 xarray==0.21.1; python_version >= "3.8"
 xdg==5.1.1; python_version >= "3.6" and python_version < "4.0"
 yarl==1.7.2; python_version >= "3.6"
-zipp==3.7.0; python_version < "3.9" and python_version >= "3.7"
