--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,9 +86,11 @@ upload-webserver:
     DOCKER_TLS_CERTDIR: ""
   only:
     - tags
-    - main
+    - master
   script:
-    - ./ci/upload-webserver.sh
+    - mkdir -p /kaniko/.docker
+    - echo "{\"auths\":{\"$CI_REGISTRY\":{\"username\":\"$CI_REGISTRY_USER\",\"password\":\"$CI_REGISTRY_PASSWORD\"}}}" > /kaniko/.docker/config.json
+    - /kaniko/executor --context "$CI_PROJECT_DIR" --dockerfile "$CI_PROJECT_DIR/Dockerfile" --destination "$IMAGE_SLUG_TAG" --destination "$IMAGE_COMMIT_TAG"
 
 upload-webserver-manual:
   image:
