--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "elm-live": "^4.0.2",
+    "elm-go": "^5.0.13",
     "elm-review": "^2.7.0",
     "http-server": "^14.1.0",
     "uglify-js": "^3.14.5"
