--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -47,13 +47,13 @@ msgpack-numpy==0.4.8
 msgpack-types==0.1.0; python_version >= "3.7" and python_version < "4.0"
 msgpack==1.0.2
 multidict==6.0.2; python_version >= "3.7"
-mypy-extensions==0.4.3; python_version >= "3.6" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and python_full_version >= "3.6.2"
+mypy-extensions==0.4.3; python_full_version >= "3.6.2" and python_version >= "3.6"
 mypy==0.942; python_version >= "3.6"
 numpy==1.21.4; python_version >= "3.7" and python_version < "3.11"
 openpyxl-stubs==0.1.21
 openpyxl==3.0.9; python_version >= "3.6"
 packaging==21.3; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.8"
-pandas==1.3.4; python_full_version >= "3.7.1"
+pandas==1.4.3; python_version >= "3.8"
 pathspec==0.9.0; python_full_version >= "3.6.2"
 perflint==0.7.3
 pillow==9.1.0; python_version >= "3.7"
@@ -80,13 +80,13 @@ pyzmq==22.3.0; python_version >= "3.6"
 quart-cors==0.5.0; python_full_version >= "3.7.0"
 quart==0.17.0; python_version >= "3.7"
 randomname==0.1.5
-six==1.16.0; python_full_version >= "3.7.1"
+six==1.16.0; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
 sortedcontainers==2.4.0; python_version >= "3.6"
-sqlalchemy2-stubs==0.0.2a24; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
+sqlalchemy2-stubs==0.0.2a24; python_version >= "3.6"
 sqlalchemy==1.4.31; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 termcolor==1.1.0
 toml==0.10.2; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
-tomli==2.0.1; python_version < "3.11" and python_full_version >= "3.7.2" and python_version >= "3.8" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0")
+tomli==2.0.1; python_version < "3.11" and python_full_version >= "3.7.2" and python_version >= "3.8"
 tomlkit==0.11.1; python_version >= "3.8" and python_version < "3.11" and python_full_version >= "3.7.2"
 tqdm==4.62.3; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 typed-argument-parser==1.7.2
@@ -94,7 +94,7 @@ types-python-dateutil==2.8.3
 types-pytz==2021.3.6
 types-pyyaml==5.4.12
 types-requests==2.26.0
-typing-extensions==4.3.0; python_version >= "3.8" and python_full_version >= "3.7.2" and python_version < "3.10" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7")
+typing-extensions==4.3.0; python_version >= "3.8" and python_full_version >= "3.7.2" and python_version < "3.10"
 typing-inspect==0.7.1
 werkzeug==2.1.2; python_version >= "3.7" and python_full_version >= "3.7.0"
 wrapt==1.14.1; python_full_version >= "3.7.2"
