--- a/requirements.txt
+++ b/requirements.txt
@@ -35,12 +35,11 @@ markupsafe==2.1.1; python_version >= "3.7" and python_full_version >= "3.7.0"
 msgpack-numpy==0.4.8
 msgpack==1.0.2
 multidict==6.0.2; python_version >= "3.7"
-mypy-extensions==0.4.3; python_version >= "3.6" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0")
-mypy==0.942; python_version >= "3.6"
+mypy-extensions==0.4.3
 numpy==1.21.4; python_version >= "3.7" and python_version < "3.11"
 openpyxl==3.0.9; python_version >= "3.6"
 packaging==21.3; python_version >= "3.8"
-pandas==1.3.4; python_full_version >= "3.7.1"
+pandas==1.4.3; python_version >= "3.8"
 pillow==9.1.0; python_version >= "3.7"
 pint==0.16.1; python_version >= "3.6"
 priority==2.0.0; python_full_version >= "3.6.1" and python_version >= "3.7"
@@ -57,15 +56,13 @@ pyzmq==22.3.0; python_version >= "3.6"
 quart-cors==0.5.0; python_full_version >= "3.7.0"
 quart==0.17.0; python_version >= "3.7"
 randomname==0.1.5
-six==1.16.0; python_full_version >= "3.7.1"
-sqlalchemy2-stubs==0.0.2a24; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
+six==1.16.0; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.8"
 sqlalchemy==1.4.31; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 termcolor==1.1.0
 toml==0.10.2; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
-tomli==2.0.1; python_version >= "3.7" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0")
 tqdm==4.62.3; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 typed-argument-parser==1.7.2
-typing-extensions==4.3.0; python_version >= "3.7" and python_full_version >= "3.6.1" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and (python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.7")
+typing-extensions==4.3.0; python_version >= "3.7" and python_full_version >= "3.6.1"
 typing-inspect==0.7.1
 werkzeug==2.1.2; python_version >= "3.7" and python_full_version >= "3.7.0"
 wsproto==1.1.0; python_full_version >= "3.7.0" and python_version >= "3.7"
