--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,19 +4,23 @@ default:
 
 mypy:
   script:
-    - nix develop --command mypy amarcord tests
+    - nix develop .#with-build-tools --command mypy amarcord tests
+
+pyright:
+  script:
+    - nix develop .#with-build-tools --command pyright
 
 pylint:
   script:
-    - nix develop --command pylint amarcord tests
+    - nix develop .#with-build-tools --command pylint amarcord tests
 
 isort:
   script:
-    - nix develop --command isort --check amarcord tests
+    - nix develop .#with-build-tools --command isort --check amarcord tests
 
 check-shell-scripts:
    script:
-     - nix develop --command shellcheck ci/*.sh
+     - nix develop .#with-build-tools --command shellcheck ci/*.sh
 
 elm-review:
   script:
@@ -42,7 +46,7 @@ check-requirements:
      - nix develop --command ./ci/check-requirements.sh
 tests:
   script:
-    - nix develop --command ci/run-tests.sh
+    - nix develop .#with-build-tools --command ci/run-tests.sh
   coverage: '/(?i)total.*? (100(?:\.0+)?\%|[1-9]?\d(?:\.\d+)?\%)$/'
   artifacts:
     reports:
