--- a/pyproject.toml
+++ b/pyproject.toml
@@ -111,15 +111,15 @@ build-backend = "poetry.core.masonry.api"
 profile = "black"
 force_single_line = "true"
 
-[tool.pylint.'TYPECHECK']
+[tool.pylint."TYPECHECK"]
 ignored-modules = ["alembic.op","alembic.context"]
 generated-members = ["SUB","SUBSCRIBE","EVENT_DISCONNECTED","EVENT_HANDSHAKE_SUCCEEDED","REQ","RCVTIMEO","EVENT_CONNECTED","PUB"]
 
-[tool.pylint.'MASTER']
+[tool.pylint."MASTER"]
 load-plugins=["pylint.extensions.typing","pylint.extensions.redefined_variable_type","cfel_pylint_checkers.no_direct_dict_access"]
 extension-pkg-allow-list=["pydantic"]
 
-[tool.pylint.'MESSAGES CONTROL']
+[tool.pylint."MESSAGES CONTROL"]
 disable=["invalid-name", "missing-module-docstring", "too-many-instance-attributes", "too-many-branches", "missing-class-docstring", "missing-function-docstring", "line-too-long", "missing-final-newline", "logging-not-lazy", "broad-except", "too-many-arguments", "bare-except", "too-few-public-methods", "too-many-locals", "too-many-nested-blocks", "too-many-statements", "too-many-public-methods", "too-many-return-statements", "blacklisted-name", "duplicate-code", "logging-fstring-interpolation", "too-many-lines", "too-many-boolean-expressions", "logging-format-interpolation", "raise-missing-from", "deprecated-typing-alias", "subprocess-run-check"]
 
 [tool.mypy]
@@ -132,8 +132,79 @@ disallow_untyped_calls = true
 disallow_untyped_defs = true
 disallow_incomplete_defs = true
 check_untyped_defs = true
-plugins = ["sqlalchemy.ext.mypy.plugin"]
+plugins = ["sqlalchemy.ext.mypy.plugin", "numpy.typing.mypy_plugin"]
+show_error_codes = true
 
 [[tool.mypy.overrides]]
 module = ["PIL", "pint", "randomname", "h5py"]
 ignore_missing_imports = true
+
+[tool.pyright]
+include = ["amarcord", "tests"]
+typeCheckingMode = "basic"
+useLibraryCodeForType = true
+strictListInference = true
+strictDictionaryInference = true
+strictSetInference = true
+reportInvalidStringEscapeSequence = true
+reportAssertAlwaysTrue = true
+reportInvalidTypeVarUse = false
+# deliberately false, since we cannot do anything if this happens
+reportMissingTypeStubs = false
+reportSelfClsParameterName = true
+reportUnsupportedDunderAll = true
+reportUnusedExpression = true
+reportWildcardImportFromLibrary = true
+reportConstantRedefinition = true
+reportDeprecated = true
+reportDuplicateImport = true
+reportFunctionMemberAccess = true
+reportImportCycles = true
+reportIncompatibleMethodOverride = true
+reportIncompatibleVariableOverride = true
+reportIncompleteStub = true
+reportInconsistentConstructor = true
+reportInvalidStubStatement = true
+reportMatchNotExhaustive = true
+reportMissingParameterType = true
+reportMissingTypeArgument = true
+reportOverlappingOverload = true
+reportPrivateUsage = true
+reportTypeCommentUsage = true
+reportUnknownLambdaType = true
+reportUnknownArgumentType = true
+reportUnknownParameterType = true
+# Doesn't work _at all_ for libraries
+reportUnknownMemberType = false
+# Doesn't work _at all_ for libraries
+reportUnknownVariableType = false
+reportUnnecessaryCast = true
+reportUnnecessaryComparison = true
+reportUnnecessaryContains = true
+reportUnnecessaryIsInstance = true
+reportUnusedClass = true
+reportUnusedImport = true
+reportUnusedFunction = true
+reportUnusedVariable = true
+reportUntypedBaseClass = true
+reportUntypedClassDecorator = true
+# this screws up quart route annotations
+reportUntypedFunctionDecorator = false
+reportUntypedNamedTuple = true
+
+reportCallInDefaultInitializer = true
+reportImplicitOverride = true
+reportImplicitStringConcatenation = true
+# In principle, a good message. However, it also forces you to call the object super method, which is pointless
+reportMissingSuperCall = false
+
+reportPropertyTypeMismatch = true
+reportShadowedImports = true
+# Works also, but doesn't play along with Tap
+reportUninitializedInstanceVariable = false
+# This works, but there's no way to ignore something in mypy, but not in pyright
+reportUnnecessaryTypeIgnoreComment = false
+# Sensible, but false positive waaaaaay to often
+reportUnusedCallResult = false
+pythonVersion = "3.10"
+stubPath = "stubs"
