--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,6 @@ cryptography = '40.0.2'
 typed-argument-parser = '1.7.2'
 # For the config file
 pydantic = '1.10.13'
-# numpy for processing results
-numpy = '1.23.5'
 # For validating units
 pint = '0.23'
 
@@ -40,8 +38,6 @@ asyncmy = "0.2.7"
 pytz = "2021.3"
 # to test incoming files for their mime types
 python-magic = "0.4.24"
-# For the experiment simulator
-randomname = "0.1.5"
 
 # For http requests
 aiohttp = "3.9.1"
@@ -62,6 +58,7 @@ structlog-overtime = "1.0.1"
 greenlet = "1.1.3"
 
 [tool.poetry.dev-dependencies]
+autoimport = "1.4.0"
 # for FastAPI tests, see
 # https://fastapi.tiangolo.com/tutorial/testing/
 httpx = "0.25.2"
@@ -95,7 +92,9 @@ fawltydeps = "0.12.0"
 
 [tool.poetry.scripts]
 # These are not all files in cli/, but the ones we definitely intend to keep.
-amarcord-daemon = "amarcord.cli.daemon:main"
+amarcord-mjpeg-daemon = "amarcord.cli.mjpeg_daemon:main"
+amarcord-indexing-daemon = "amarcord.cli.indexing_daemon:main"
+amarcord-merge-daemon = "amarcord.cli.merge_daemon:main"
 amarcord-upgrade-db-to-latest = "amarcord.cli.upgrade_db_to_latest:main"
 amarcord-slurm-runner = "amarcord.cli.slurm_runner:main"
 
