--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -9,6 +9,8 @@ async-timeout==4.0.3 ; python_version >= "3.9" and python_version < "3.11"
 asyncmy==0.2.7 ; python_version >= "3.9" and python_version < "3.12"
 atomicwrites==1.4.1 ; python_version >= "3.9" and python_version < "3.12" and sys_platform == "win32"
 attrs==23.1.0 ; python_version >= "3.9" and python_version < "3.12"
+autoflake==2.3.1 ; python_version >= "3.9" and python_version < "3.12"
+autoimport==1.4.0 ; python_version >= "3.9" and python_version < "3.12"
 babel==2.14.0 ; python_version >= "3.9" and python_version < "3.12"
 black==24.3.0 ; python_version >= "3.9" and python_version < "3.12"
 certifi==2023.11.17 ; python_version >= "3.9" and python_version < "3.12"
@@ -25,7 +27,6 @@ exceptiongroup==1.2.0 ; python_version >= "3.9" and python_version < "3.11"
 execnet==2.0.2 ; python_version >= "3.9" and python_version < "3.12"
 fastapi==0.105.0 ; python_version >= "3.9" and python_version < "3.12"
 fawltydeps==0.12.0 ; python_version >= "3.9" and python_version < "3.12"
-fire==0.5.0 ; python_version >= "3.9" and python_version < "3.12"
 frozenlist==1.4.0 ; python_version >= "3.9" and python_version < "3.12"
 greenlet==1.1.3 ; python_version >= "3.9" and python_version < "3.12"
 gunicorn==21.2.0 ; python_version >= "3.9" and python_version < "3.12"
@@ -41,6 +42,7 @@ isort==5.12.0 ; python_version >= "3.9" and python_version < "3.12"
 jinja2==3.1.3 ; python_version >= "3.9" and python_version < "3.12"
 lark==1.1.8 ; python_version >= "3.9" and python_version < "3.12"
 livereload==2.6.3 ; python_version >= "3.9" and python_version < "3.12"
+maison==1.4.2 ; python_version >= "3.9" and python_version < "3.12"
 mako==1.3.0 ; python_version >= "3.9" and python_version < "3.12"
 markdown-it-py==3.0.0 ; python_version >= "3.9" and python_version < "3.12"
 markupsafe==2.1.3 ; python_version >= "3.9" and python_version < "3.12"
@@ -51,7 +53,6 @@ multidict==6.0.4 ; python_version >= "3.9" and python_version < "3.12"
 mypy-extensions==1.0.0 ; python_version >= "3.9" and python_version < "3.12"
 mypy==1.7.1 ; python_version >= "3.9" and python_version < "3.12"
 myst-parser==2.0.0 ; python_version >= "3.9" and python_version < "3.12"
-numpy==1.23.5 ; python_version >= "3.9" and python_version < "3.12"
 openpyxl-stubs==0.1.25 ; python_version >= "3.9" and python_version < "3.12"
 openpyxl==3.0.9 ; python_version >= "3.9" and python_version < "3.12"
 packaging==23.2 ; python_version >= "3.9" and python_version < "3.12"
@@ -67,10 +68,12 @@ pycparser==2.21 ; python_version >= "3.9" and python_version < "3.12"
 pydantic==1.10.13 ; python_version >= "3.9" and python_version < "3.12"
 pyenchant==3.2.2 ; python_version >= "3.9" and python_version < "3.12"
 pyfakefs==4.7.0 ; python_version >= "3.9" and python_version < "3.12"
+pyflakes==3.2.0 ; python_version >= "3.9" and python_version < "3.12"
 pygments==2.17.2 ; python_version >= "3.9" and python_version < "3.12"
 pylint==3.0.2 ; python_version >= "3.9" and python_version < "3.12"
 pymysql==1.1.0 ; python_version >= "3.9" and python_version < "3.12"
 pyparsing==3.1.1 ; python_version >= "3.9" and python_version < "3.12"
+pyprojroot==0.3.0 ; python_version >= "3.9" and python_version < "3.12"
 pytest-asyncio==0.17.2 ; python_version >= "3.9" and python_version < "3.12"
 pytest-bdd==7.0.1 ; python_version >= "3.9" and python_version < "3.12"
 pytest-cov==2.12.1 ; python_version >= "3.9" and python_version < "3.12"
@@ -82,8 +85,8 @@ python-magic==0.4.24 ; python_version >= "3.9" and python_version < "3.12"
 python-multipart==0.0.6 ; python_version >= "3.9" and python_version < "3.12"
 pytz==2021.3 ; python_version >= "3.9" and python_version < "3.12"
 pyyaml==6.0.1 ; python_version >= "3.9" and python_version < "3.12"
-randomname==0.1.5 ; python_version >= "3.9" and python_version < "3.12"
 requests==2.31.0 ; python_version >= "3.9" and python_version < "3.12"
+sh==2.0.6 ; python_version >= "3.9" and python_version < "3.12"
 six==1.16.0 ; python_version >= "3.9" and python_version < "3.12"
 sniffio==1.3.0 ; python_version >= "3.9" and python_version < "3.12"
 snowballstemmer==2.2.0 ; python_version >= "3.9" and python_version < "3.12"
@@ -102,7 +105,6 @@ sqlalchemy==2.0.23 ; python_version >= "3.9" and python_version < "3.12"
 starlette==0.27.0 ; python_version >= "3.9" and python_version < "3.12"
 structlog-overtime==1.0.1 ; python_version >= "3.9" and python_version < "3.12"
 structlog==22.1.0 ; python_version >= "3.9" and python_version < "3.12"
-termcolor==2.3.0 ; python_version >= "3.9" and python_version < "3.12"
 toml==0.10.2 ; python_version >= "3.9" and python_version < "3.12"
 tomli==2.0.1 ; python_version >= "3.9" and python_version < "3.11"
 tomlkit==0.12.3 ; python_version >= "3.9" and python_version < "3.12"
@@ -117,5 +119,6 @@ typing-inspect==0.9.0 ; python_version >= "3.9" and python_version < "3.12"
 urllib3==2.1.0 ; python_version >= "3.9" and python_version < "3.12"
 uvicorn==0.23.2 ; python_version >= "3.9" and python_version < "3.12"
 vulture==2.10 ; python_version >= "3.9" and python_version < "3.12"
+xdg==6.0.0 ; python_version >= "3.9" and python_version < "3.12"
 yarl==1.9.3 ; python_version >= "3.9" and python_version < "3.12"
 zipp==3.17.0 ; python_version >= "3.9" and python_version < "3.12"
